--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# backend
+backend/src/main/resources/application-prod.properties
+backend/src/main/resources/application.properties
+
 # dependencies
 /node_modules
 /.pnp
