--- a/.ebextensions/01_environment.config
+++ b/.ebextensions/01_environment.config
@@ -1,9 +1,7 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
     SPRING_PROFILES_ACTIVE: prod
-  aws:elasticbeanstalk:container:java:
-    Xms: 256m
-    Xmx: 512m
+    JAVA_OPTS: "-Xms256m -Xmx512m"
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
     /public: public 
