--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -32,12 +32,13 @@ spring.web.cors.allowed-origins=https://imageclec.com,https://www.imageclec.com,
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
-# Logging (menos verboso para producción)
+# Logging (más verboso para debug)
 logging.level.org.springframework=DEBUG
-logging.level.com.imageclec=INFO
-logging.level.org.springframework.web=WARN
-logging.level.org.springframework.mail=WARN
+logging.level.com.imageclec=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.mail=DEBUG
 logging.level.org.springframework.boot.context.config=DEBUG
+logging.level.org.springframework.boot.autoconfigure=DEBUG
 
 # Actuator endpoints
 management.endpoints.web.exposure.include=health,info 
