--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -28,9 +28,11 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Configuración de CORS (más restrictiva para producción)
-spring.web.cors.allowed-origins=https://imageclec.cl,https://www.imageclec.cl,https://*.amplifyapp.com,http://localhost:3000,imageclec.cl
+spring.web.cors.allowed-origins=https://imageclec.cl,https://www.imageclec.cl,https://*.amplifyapp.com,http://localhost:3000,http://imageclec.cl,https://imageclec.com,https://www.imageclec.com
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+spring.web.cors.max-age=3600
 
 # Logging (menos verboso para producción)
 logging.level.org.springframework=DEBUG
