Configure HTTPS for Elastic Beanstalk and update frontend to use HTTPS

--- a/.ebextensions/01_environment.config
+++ b/.ebextensions/01_environment.config
@@ -4,4 +4,10 @@ option_settings:
     JAVA_OPTS: "-Xms256m -Xmx512m"
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
-    /public: public 
+    /public: public
+  aws:elasticbeanstalk:environment:proxy:
+    ProxyServer: nginx
+  aws:autoscaling:launchconfiguration:
+    SecurityGroups: sg-01522ff18219b1691
+  aws:elasticbeanstalk:environment:
+    LoadBalancerType: application 
