Configurar HTTPS con dominio personalizado api.imageclec.cl

--- a/.ebextensions/01_environment.config
+++ b/.ebextensions/01_environment.config
@@ -4,4 +4,8 @@ option_settings:
     JAVA_OPTS: "-Xms256m -Xmx512m"
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
-    /public: public 
+    /public: public
+  aws:elasticbeanstalk:environment:process:default:
+    HealthCheckPath: /api/health
+    Port: 5000
+    Protocol: HTTP 
