--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -28,10 +28,10 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Configuración de CORS (más restrictiva para producción)
-spring.web.cors.allowed-origin-patterns=*
+spring.web.cors.allowed-origin-patterns=https://imageclec.cl,https://www.imageclec.cl,https://*.amplifyapp.com
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=false
+spring.web.cors.allow-credentials=true
 spring.web.cors.max-age=3600
 
 # Logging (menos verboso para producción)
