--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -27,12 +27,7 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
-# Configuración de CORS (más restrictiva para producción)
-spring.web.cors.allowed-origins=https://imageclec.cl,https://www.imageclec.cl,https://main.d1oqjwaqzwsxgm.amplifyapp.com
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
-spring.web.cors.max-age=3600
+# Configuración de CORS manejada en CorsConfig.java
 
 # Logging (menos verboso para producción)
 logging.level.org.springframework=DEBUG
