--- a/.ebextensions/01_environment.config
+++ b/.ebextensions/01_environment.config
@@ -2,10 +2,13 @@ option_settings:
   aws:elasticbeanstalk:application:environment:
     SPRING_PROFILES_ACTIVE: prod
     JAVA_OPTS: "-Xms256m -Xmx512m"
+  aws:elasticbeanstalk:application:
+    Application Healthcheck URL: /api/health
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
     /public: public
   aws:elasticbeanstalk:environment:process:default:
     HealthCheckPath: /api/health
     Port: 5000
-    Protocol: HTTP 
+    Protocol: HTTP          
+    MatcherHTTPCode: "200"
